[package]
name = "anthropic-types"
version = "0.1.1"
edition = "2021"
description = "Type definitions for Anthropic API communication"
authors = ["Colin Rozzi"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/colinrozzi/anthropic-types"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
